Fix padding-top issue; too low.

--- a/index.css
+++ b/index.css
@@ -11,5 +11,5 @@ body {
     font-family: Jua;
     font-size: 60px;
 
-    padding-top: 20%;
+    padding-top: 15%;
 }
